# blurWeightModule

./: .gitignore  CMakeLists.txt  blurWeightModule.mod  mayaConfigure.bat  meson.build  quick_compile.bat
.github/workflows/: main.yml
blurSkinSrc/: pointsDisplay.cpp
mPaintEditor/: maya.css  paintEditorWidget.py  xsi.css
mPaintEditor/brushTools/: catchEventsUI.py
mPaintEditor/ui/: paintEditorWidget.ui
scripts/: brSkinBrushProperties.mel  brSkinBrushValues.mel  brSkinBrush_pythonFunctions.py  catchEventsUI.py  ruff.toml  userSetup.py
scripts/mPaintEditor/: __init__.py  icons.py  influenceTree.py  maya.css  paintEditorWidget.py  utils.py  xsi.css
scripts/mPaintEditor/brushTools/: brushPythonFunctions.py  catchEventsUI.py  cmdSkinCluster.py  hotkeys.py  meshFnIntersection.py
scripts/mPaintEditor/ui/: paintEditorWidget.ui
scripts/mWeightEditor/: __init__.py  utils.py  weightEditorWidget.py  xsi.css
scripts/mWeightEditor/ui/: weightEditorWidget.ui
scripts/mWeightEditor/weightTools/: abstractData.py  skinData.py  spinnerSlider.py  tableWidget.py  undoPlug.py  utils.py  weightMapsData.py
src/: blurSkinCmd.cpp  blurSkinCmd.h  blurSkinEdit.cpp  blurSkinEdit.h  functions.cpp  pointsDisplay.h
src/blurSkin/: meson.build
src/blurSkin/include/: blurSkinEdit.h
src/blurSkin/src/: blurSkinEdit.cpp  pluginMain.cpp  pointsDisplay.cpp
src/brSkinBrush/: meson.build
src/brSkinBrush/include/: functions.h  skinBrushFlags.h  skinBrushTool.h
src/brSkinBrush/src/: functions.cpp  meshData.cpp  pluginMain.cpp  skinBrushCmd.cpp  skinBrushContext.cpp  skinBrushContextSetFlags.cpp  skinBrushImperative.cpp  skinBrushLegacy.cpp  skinBrushStructured.cpp  skinBrushTool.cpp
src/wireframeDisplay/: meson.build
src/wireframeDisplay/src/: pluginMain.cpp  wireframeDisplay.cpp
subprojects/maya/: meson.build  meson.options
